--- a/.gitmodules
+++ b/.gitmodules
@@ -74,3 +74,7 @@
 	path = tdl_sdk
 	url = https://github.com/hmmm3012/tdl_sdk
 	branch = sg2002-dev
+[submodule "freertos"]
+	path = freertos
+	url = https://github.com/hmmm3012/freertos.git
+	branch = sg2002-dev
